--- a/CodeAssets/Css/main.css
+++ b/CodeAssets/Css/main.css
@@ -40,7 +40,7 @@ main p {
 }
 
 #darkModeButton p {
-    color: #747474;
+    color: #ffffff;
     margin-left: 10px;
     margin-right: 0;
     transition: all 0.5s;
